--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/ngx-spinner/animations/ball-spin-clockwise.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css","node_modules/fontawesome-free/css/all.min.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js","node_modules/fontawesome-free/js/all.min.js"]
