--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fontawesome": "^5.6.3",
     "fontawesome-free": "^1.0.4",
     "jquery": "^3.6.0",
+    "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
