--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,10 @@
               "src/static"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-spin-clockwise.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css","node_modules/fontawesome-free/css/all.min.css"
+              "node_modules/ngx-spinner/animations/ball-spin-clockwise.css","node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/fontawesome-free/css/all.min.css"
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js","node_modules/fontawesome-free/js/all.min.js"]
           },
@@ -97,6 +98,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
