--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,7 @@
               "src/assets",
               "src/static"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css",
+            "styles": ["src/styles.css",
               "node_modules/ngx-spinner/animations/ball-spin-clockwise.css","node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/fontawesome-free/css/all.min.css"
             ],
@@ -98,8 +96,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
             ],
             "scripts": []
           }
