--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
-    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
@@ -30,6 +29,7 @@
     "fontawesome": "^5.6.3",
     "fontawesome-free": "^1.0.4",
     "jquery": "^3.6.0",
+    "ng-circle-progress": "^1.6.0",
     "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
